--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "jscrush": "0.0.0"
   },
   "scripts": {
-    "build": "cat source.js | uglifyjs -c unused=false | tee minified.js | jscrush > crushed.js && sed -e '/SUB/r source.js' < shim.html > index.html && wc -c *.js"
+    "build": "cat source.js | uglifyjs -c unused=false | tee minified.js | jscrush > crushed.js && sed -e '/SUB/r source.js' < shim.html > index.html && wc -c *.js",
+    "webgl": "cat webgl.js | uglifyjs -c unused=false | tee minified.js | jscrush > crushed.js && sed -e '/SUB/r webgl.js' < shim.html > index.html && wc -c *.js"
   }
 }
